--- a/css/style.css
+++ b/css/style.css
@@ -53,31 +53,60 @@ html, body {
         align-items: center;
     }
 
-    .top-menu a {
+    .top-menu .site-settings {
+        display: flex;
+     } 
+     
+        .top-menu .site-settings .dropdown-theme  {
+            background-color: var(--color-theme);
+            color: var(--color-white);
+        }
+            .top-menu .site-settings .dropdown-theme button {
+                background-color: var(--color-theme);
+                color: var(--color-white);
+                border: none;
+            }
+                .top-menu .site-settings .dropdown-theme button:hover {
+                    color: var(--color-theme-dark);
+                }
+
+            .top-menu .site-settings .dropdown-theme .dropdown-menu {
+                background-color: var(--color-theme);
+                color: var(--color-white);
+                border: none;
+                width: 250px;
+                margin-top: 3rem;
+            }
+                .top-menu .site-settings .dropdown-theme .dropdown-menu .dropdown-item {
+                    background-color: var(--color-theme);
+                    color: var(--color-white);
+                    border: none;
+                    width: 100%;
+                    margin: 0;
+                }
+                    .top-menu .site-settings .dropdown-theme .dropdown-menu .dropdown-item:hover {
+                        background-color: var(--color-theme-dark);
+                        color: var(--color-white);
+                    }
+
+
+
+    .top-menu .menu-links a {
         color: var(--color-white);
         text-decoration: none;
         margin: 0 1.2rem;
     }
-        .top-menu a:hover {
+        .top-menu .menu-links a:hover {
             color: var(--color-theme-dark);
         }
 
-    .top-menu .social-media {
-        margin-left: 1rem;
-    }
-        .top-menu .social-media a {
-            margin: 0 0.3rem;
+        .top-menu .menu-links .social-media {
+            margin-left: 1rem;
+            font-size: var(--font-size-14);
         }
-            .top-menu .social-media a:last-child {
-                margin: 0 0 0 0.3rem;
+            .top-menu .menu-links .social-media a {
+                margin: 0 0.3rem;
             }
-
-
-    .top-menu .dropdown-theme button {
-        background-color: var(--color-theme);
-        color: var(--color-white);
-        border: none;
-    }
-        .top-menu .dropdown-theme button:hover {
-            color: var(--color-theme-dark);
-        }
+                .top-menu .menu-links .social-media a:last-child {
+                    margin: 0 0 0 0.3rem;
+                }
