--- a/css/style.css
+++ b/css/style.css
@@ -52,11 +52,11 @@ html, body {
         justify-content: end;
         align-items: center;
     }
-
     .top-menu .site-settings {
         display: flex;
      } 
-     
+
+
         .top-menu .site-settings .dropdown-theme  {
             background-color: var(--color-theme);
             color: var(--color-white);
@@ -65,6 +65,7 @@ html, body {
                 background-color: var(--color-theme);
                 color: var(--color-white);
                 border: none;
+                padding: 0;
             }
                 .top-menu .site-settings .dropdown-theme button:hover {
                     color: var(--color-theme-dark);
@@ -121,13 +122,16 @@ html, body {
 
 /* main-menu */
 .main-menu {
-    padding: 2rem 0;
+    background-color: var(--color-white);
+    color: var(--color-theme-dark);
 }
 
-    .main-menu .container {
+    .main-menu > .container {
         display: flex;
         justify-content: space-between;
         align-items: center;
+        padding-top: 2.2rem;
+        padding-bottom: 2.2rem;
     }
 
     .main-menu .brand {
@@ -161,10 +165,25 @@ html, body {
             font-size: var(--font-size-16);
         }
 
+    .main-menu nav {
+        border-top: 1px solid var(--color-gray-3);
+    }
+        .main-menu > nav > .container {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }  
 
-
-
-
+        .main-menu nav .browse-categories {
+            flex: 2;
+        }
+        
+        .main-menu nav .special-offer {
+            flex: 7;
+            display: flex;
+            justify-content: end;
+            align-items: center;
+        }
 
 
 
