--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,19 @@ html, body {
         color: var(--color-white);
     }
 
+.btn-white {
+    background-color: var(--color-white);
+    color: var(--color-theme);
+    border-radius: var(--border-radius-medium);
+    font-weight: var(--font-weight-medium);
+    padding-left: 1.75rem;
+    padding-right: 1.75rem;
+}
+        .btn-white:hover {
+            background-color: var(--color-theme-dark);
+            color: var(--color-white);
+        }
+
 
 /* top-menu*/
 .top-menu {
@@ -231,24 +244,14 @@ html, body {
     background-color: var(--color-gray-3);
 }
     .showcase .container {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
+        text-align: center;
+        padding-top: 2.4rem;
+        padding-bottom: 2.4rem;
     }
-
-    .showcase .showcase-body {
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-        padding: 3rem 1rem;
-    }
-
 
     .showcase .showcase-body h1 {
+        font-size: 3.5rem;
         font-family: var(--font-play);
-        font-size: 3.8rem;
-        text-align: center;
-        margin-bottom: 2rem;
     }
         .showcase .showcase-body h1 strong {
             font-weight: var(--font-weight-bold);
@@ -256,12 +259,12 @@ html, body {
         }
 
         .showcase .showcase-body p {
-            display: none;
+            margin: 2rem 0;
         }
 
-    .showcase img {
-        display: none;
-    }
+        .showcase img {
+            display: none;
+        }
 
 
 
@@ -276,15 +279,13 @@ html, body {
     }
 }
 
+
 @media (min-width: 768px) {
     .showcase .showcase-body h1 {
-        font-size: var(--font-size-60);
-    } 
-
-    .showcase .showcase-body p {
+        font-size: var(--font-size-60)
+    }
+    .showcase .showcase-body h1 strong {
         display: block;
-        text-align: center;
-        margin-bottom: 2.4rem;
     }
 }
 
@@ -293,27 +294,31 @@ html, body {
         display: inline;
     }
 
-    .showcase .showcase-body {
-        justify-content: start;
-    }
-
-    .showcase .showcase-body h1 {
-        justify-content: start;
+    .showcase .container {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
         text-align: left;
+        padding-top: 0;
+        padding-bottom: 0;
     }
-
-    .showcase .showcase-body p {
-        text-align: left;
-    }
-
 
     .showcase img {
         display: block;
         width: 50%;
-        height: 100%;
     }
+
 }
 
 @media (min-width: 1200px) {
-
+    .showcase .showcase-body {
+        flex: 1;
+    }
+    .showcase .showcase-body p {
+        width: 80%;
+    }
+    .showcase img {
+        flex: 1;
+        width: 100%;
+    }
 }
