--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,12 @@ html, body {
             color: var(--color-white);
         }
 
+.bg-theme {
+    background-color: var(--color-theme);
+}
+        
+
+
 .section-title {
     padding: 3rem 0;
     color: var(--color-theme-dark);
@@ -211,6 +217,19 @@ html, body {
             font-size: var(--font-size-16);
         }
 
+        .main-menu .menu-links #cart {
+            position: relative;
+        }
+            .main-menu .menu-links #cart .badge {
+                background-color: var(--color-theme);
+                position: absolute;
+                top: -0.7rem;
+                left: 1.2rem;
+            }
+                .main-menu .menu-links #cart:hover .badge {
+                    background-color: var(--color-theme-dark);
+                }
+
     .main-menu nav {
         border-top: 1px solid var(--color-gray-2);
         border-bottom: 1px solid var(--color-gray-2);
@@ -338,6 +357,7 @@ html, body {
     }
 
     .shop-by-category .category-box {
+        position: relative;
         background-color: var(--color-gray-1);
         border-radius: var(--border-radius-small);
         height: 100%;
@@ -346,6 +366,9 @@ html, body {
     }
 
         .shop-by-category .category-box .category-box-title {
+           position: absolute;
+           left: 0;
+           bottom: 0; 
            width: 50%;
            border-radius: 0 var(--border-radius-small) 0 0; 
            background-color: var(--color-theme-dark);
