--- a/css/style.css
+++ b/css/style.css
@@ -375,8 +375,18 @@ html, body {
            color: var(--color-theme);
            padding: 0.5rem 1rem;
            font-weight: var(--font-weight-medium);
+           height: 38px;
+        }
+        .shop-by-category .category-box:hover .category-box-title {
+            height: 75px;
         }
 
+        .shop-by-category .category-box .category-box-title span {
+            display: block;
+            color: var(--color-white);
+            font-size: 0.8rem;
+            margin-top: 0.5rem;
+        }
 
         #category-box-1 {
             grid-column: 1 / 2;
