--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,12 @@ html, body {
     background-color: var(--color-theme);
 }
         
-
+.instock {
+    color: var(--color-product-instock);
+}
+.outofstock {
+    color: var(--color-product-outofstock);
+}
 
 .section-title {
     padding: 3rem 0;
@@ -254,6 +259,7 @@ html, body {
                 justify-content: space-between;
                 align-items: center;
                 padding: 0.7rem 1rem;
+                transition: 0.15s ease-in-out;
             }
                 .main-menu nav .browse-categories button:hover {
                     background-color: var(--color-theme-dark);
@@ -325,6 +331,7 @@ html, body {
         margin: 0 1rem;
         flex: 1;
         border-radius: var(--border-radius-small);
+        transition: all 0.3s ease-in-out;
     }
     .webshop-info .info-box:hover {
         background-color: var(--color-theme);
@@ -333,15 +340,18 @@ html, body {
 
     .webshop-info .info-box img {
         margin-right: 1.5rem;
+        filter: brightness(100%);
+        transition: all 0.3s ease-in-out;
     }
         .webshop-info .info-box:hover img {
-            filter: brightness(1000%)
+            filter: brightness(1000%);
         }
         
     .webshop-info .info-box h1 {
         color: var(--color-theme);
         font-size: 1rem;
         font-weight: var(--font-weight-medium);
+        transition: all 0.3s ease-in-out;
     }
         .webshop-info .info-box:hover h1 {
             color: var(--color-white);
@@ -376,6 +386,7 @@ html, body {
            padding: 0.5rem 1rem;
            font-weight: var(--font-weight-medium);
            height: 38px;
+           transition: 0.2s ease-in-out;
         }
         .shop-by-category .category-box:hover .category-box-title {
             height: 75px;
@@ -418,8 +429,75 @@ html, body {
         }
 
 
+    .new-arrivals {
+      padding-top: 6rem;  
+    }    
+
+        .new-arrivals .card {
+            position: relative;
+            height: 400px;
+            width: 350px;
+            overflow: hidden;
+        }
+
+        .new-arrivals .card img {
+            height: 400px;
+        }
+
+        .new-arrivals .card .card-body {
+            position: absolute;
+            bottom: 0;
+            color: var(--color-white);
+            z-index: 1;
+            transition: 0.3s ease-in-out;
+        }
+            .new-arrivals .card .card-body h1 {
+                font-size: 1.125rem;
+            }
+
+        .new-arrivals .card .card-background {
+            position: absolute;
+            bottom: 0;
+            height: 15%;
+            width: 100%;
+            background-color: var(--color-theme-dark);
+            opacity: 0.90;
+            transition: height 0.3s ease-in-out;
+        }
+            .new-arrivals .card:hover .card-background {
+                height: 100%;
+            }    
 
 
+        .new-arrivals .card .card-menu {
+            position: absolute;
+            z-index: 1;
+            top: 121%;
+            right: 10%;
+            list-style: none;
+            margin: auto;
+            padding: 0.8rem;
+            font-size: 1.25rem;
+            border-radius: var(--border-radius-medium);
+            background-color: var(--color-white);
+            transition: top 0.3s ease-in-out;
+        }  
+            .new-arrivals .card:hover .card-menu {
+                top: 20px;
+            }
+
+                .new-arrivals .card .card-menu li {
+                    margin-top: 0.3rem;
+                    margin-bottom: 0.3rem;
+                    font-size: 1.0em;
+                }
+
+                    .new-arrivals .card .card-menu li a {
+                        color: var(--color-gray-0);
+                    }
+                        .new-arrivals .card .card-menu li a:hover {
+                            color: var(--color-theme);
+                        }
 
 
     @media (min-width: 578px) {
