--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,9 @@ html, body {
 .bg-theme {
     background-color: var(--color-theme);
 }
+.text-theme {
+    color: var(--color-theme);
+}
         
 .instock {
     color: var(--color-product-instock);
@@ -435,8 +438,7 @@ html, body {
 
         .new-arrivals .card {
             position: relative;
-            height: 400px;
-            width: 350px;
+            height: 380px;
             overflow: hidden;
         }
 
@@ -446,13 +448,48 @@ html, body {
 
         .new-arrivals .card .card-body {
             position: absolute;
+            padding: 1rem;
             bottom: 0;
+            height: 14%;
+            width: 100%;
             color: var(--color-white);
             z-index: 1;
             transition: 0.3s ease-in-out;
+            font-size: 1rem;
         }
+            .new-arrivals .card:hover .card-body {
+                height: 40%;
+            }
+
             .new-arrivals .card .card-body h1 {
                 font-size: 1.125rem;
+                margin-bottom: 1rem;
+                transition: 0.3s ease-in-out;
+                font-weight: var(--font-weight-regular);
+            }
+                .new-arrivals .card:hover .card-body h1 {
+                    margin-bottom: 0;
+                }
+
+            .new-arrivals .card .card-body button {
+                background-color: transparent;
+                color: var(--color-white);
+                border: 1px solid var(--color-white);
+                font-size: 0.875rem;
+                padding-left: 0.9rem;
+                padding-right: 0.9rem;
+                margin: 0.5rem 0;
+            }
+
+            .new-arrivals .card .card-body .card-old-price {
+                text-decoration: line-through;
+                margin: 0;
+            }
+            .new-arrivals .card .card-body .card-discount-price {
+                color: var(--color-theme);
+                font-weight: var(--font-weight-medium);
+                font-size: 1.5em;
+                margin: 0;
             }
 
         .new-arrivals .card .card-background {
@@ -473,9 +510,8 @@ html, body {
             position: absolute;
             z-index: 1;
             top: 121%;
-            right: 10%;
+            right: 1rem;
             list-style: none;
-            margin: auto;
             padding: 0.8rem;
             font-size: 1.25rem;
             border-radius: var(--border-radius-medium);
