--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
     --color-theme: #20D3C2;
     --color-theme-light: #EDFCFA;
     --color-theme-dark: #0E153D;
+    --color-theme-dark-light: #50546E;
     --color-dark: #080C24;
     --color-white: #FFFFFF;
     --color-gray-0: #AAAAAA;
@@ -534,6 +535,41 @@ html, body {
                         .new-arrivals .card .card-menu li a:hover {
                             color: var(--color-theme);
                         }
+
+
+.site-title {
+    background-color: var(--color-theme-dark-light);
+    color: #ffffff;
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+}
+
+.site-title .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.site-title h1 {
+    color: var(--color-theme);
+    font-size: 1.5rem;
+    margin: 0;
+    font-family: var(--font-roboto);
+    font-weight: var(--font-weight-medium);
+}
+
+
+.breadcrumb {
+    display: flex;
+    align-items: center;
+}
+
+.breadcrumb-item {
+    display: flex;
+    align-items: center;
+}
+
+
 
 
     @media (min-width: 578px) {
