--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@
     --color-gray-2: #E3E3E3;
     --color-gray-3: #EEEEEE;
     --color-gray-4: #F6F6F6;
+    --color-gray-5: #777777;
     --color-product-instock: #82D8C6;
     --color-product-outofstock: #FE6C6C;
 
@@ -81,6 +82,10 @@ html, body {
     color: var(--color-product-outofstock);
 }
 
+.required {
+    color: var(--color-theme);
+}
+
 .section-title {
     padding: 3rem 0;
     color: var(--color-theme-dark);
@@ -98,8 +103,54 @@ html, body {
         .section-title p {
             margin: 1rem 0;
         }
-
-
+  
+        .form-theme .card {
+            padding: 1.5rem;
+            border: none;
+            border-radius: var(--border-radius-small);
+            background-color: var(--color-gray-4);
+        } 
+        
+            .form-theme .card .card-body h1 {
+                font-family: var(--font-roboto);
+                font-weight: var(--font-weight-medium);
+                color: var(--color-theme-dark);
+                font-size: 1.5rem;
+            }
+        
+            .form-theme .card .card-body .card-text {
+                margin: 1.5rem 0;
+                line-height: 2;
+            }
+                .form-theme .card .card-body .card-text a {
+                    color: var(--color-theme);
+                    font-weight: var(--font-weight-medium);
+                    text-decoration: none;
+                }
+                .form-theme .card .card-body .card-text a:hover {
+                    color: var(--color-theme-dark);
+                    text-decoration: underline;
+                }
+        
+        
+                .form-theme .card .card-body .card-text.text-small {
+                    color: var(--color-gray-5);
+                    font-size: 0.875rem;
+                }
+        
+        
+    .form-theme form input {
+        display: block;
+        width: 100%;
+        border: none;
+        border-radius: var(--border-radius-small);
+        padding: 0.6rem 0.9rem;
+        margin: 0.2rem 0;
+    }
+        .form-theme form input:focus {
+            outline: 0;
+            box-shadow: 0 0 3px 0 var(--color-gray-0);
+        }
 
 
 /* top-menu*/
@@ -559,15 +610,50 @@ html, body {
 }
 
 
-.breadcrumb {
+.site-title nav ul{
     display: flex;
     align-items: center;
+    margin: 0;
+    padding: 0;
+    list-style: none;
 }
 
-.breadcrumb-item {
-    display: flex;
-    align-items: center;
+.site-title .breadcrumb {
+    list-style: none;
+    margin: 0;
+  }
+    .site-title .breadcrumb li {
+        display: inline;
+        font-size: 18px;
+    }
+        .site-title .breadcrumb li+li:before {
+            padding: 0 0.7rem 0 1rem;
+            color: var(--color-white);
+            content: "/\00a0";
+        }
+        .site-title .breadcrumb li a {
+            color: var(--color-theme);
+            text-decoration: none;
+        }
+            .site-title .breadcrumb li a:hover {
+                color: var(--color-theme-light);
+                text-decoration: underline;
+            }
+
+
+
+.signup-signin {
+    margin: 6rem 0;
 }
+    .signup-signin .container {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        column-gap: 2rem;
+        align-items: start;
+    }
+
+
+
 
 
 
