--- a/css/style.css
+++ b/css/style.css
@@ -104,6 +104,16 @@ html, body {
             margin: 1rem 0;
         }
   
+a {
+    color: var(--color-theme);
+    font-weight: var(--font-weight-regular);
+    text-decoration: none;
+}
+    a:hover {
+        color: var(--color-theme-dark);
+        text-decoration: underline;
+    }
+
         .form-theme .card {
             padding: 1.5rem;
             border: none;
@@ -123,15 +133,9 @@ html, body {
                 line-height: 2;
             }
                 .form-theme .card .card-body .card-text a {
-                    color: var(--color-theme);
                     font-weight: var(--font-weight-medium);
-                    text-decoration: none;
                 }
-                .form-theme .card .card-body .card-text a:hover {
-                    color: var(--color-theme-dark);
-                    text-decoration: underline;
-                }
-        
+
         
                 .form-theme .card .card-body .card-text.text-small {
                     color: var(--color-gray-5);
@@ -139,7 +143,15 @@ html, body {
                 }
         
         
-    .form-theme form input {
+                .form-theme form input[type=checkbox] {
+                    height: 20px;
+                    width: 20px;
+                    display: inline-block;
+                }
+
+    .form-theme form input[type=text],
+    .form-theme form input[type=email],
+    .form-theme form input[type=password] {
         display: block;
         width: 100%;
         border: none;
@@ -652,7 +664,26 @@ html, body {
         align-items: start;
     }
 
-
+    .external-logins {
+        position: relative;
+        display: flex;
+        justify-content: center;
+        z-index: 0;
+    }
+        .external-logins .label {
+            background-color: var(--color-gray-4);
+            padding: 0 1rem;
+            z-index: 2;
+        }
+            .external-logins .line {
+                position: absolute;
+                top: 10px;
+                left: 0;
+                right: 0;
+                border: 1px solid var(--color-gray-0);
+                z-index: -1;
+                opacity: 0.5;
+            }
 
 
 
