--- a/css/style.css
+++ b/css/style.css
@@ -754,7 +754,7 @@ html, body {
     }
 
 
-/* showcase2 */
+/* showcasemy */
 .showcasemy {
     background-color: #CCCCCC; 
 }
@@ -795,16 +795,6 @@ html, body {
             font-family: var(--font-weight-regular);
             font-size: 1rem;
         }
-/*         .showcasemy-body a {
-            background-color: #0E153D;
-            color: var(--color-white);
-            font-size: var(--font-weight-medium);
-            
-        }
-        .showcasemy-body a:hover {
-            background-color: #010104;
-            border: none;
-        } */
 
         .anotherText {
             margin-left: 330px;
@@ -822,7 +812,7 @@ html, body {
         }
 
 
-/* showcase2-2 */
+/* showcasemy-tow */
 .showcasemy-tow {
     background-color: #0E153D; 
 }
@@ -894,14 +884,11 @@ html, body {
 
 
 
+/* top-sellers */
 
-
-    .top-sellers {
-        padding-top: 6rem;  
-    }    
-
-
- 
+.top-sellers {
+    padding-top: 6rem;  
+}    
 
     .top-sellers .grid {
         display: grid;
@@ -918,55 +905,52 @@ html, body {
         border: none;
     }
 
- 
+            .top-sellers .card .card-body {
+                position: absolute;
+                padding: 1rem;
+                bottom: 0;
+                height: 14%;
+                width: 100%;
+                color: var(--color-white);
+                z-index: 1;
+                transition: 0.3s ease-in-out;
+                font-size: 1rem;
+            }
+                    .top-sellers .card:hover .card-body {
+                        height: 40%;
+                    }
 
+            .top-sellers .card .card-body h1 {
+                font-size: 1.125rem;
+                margin-bottom: 3.5rem;
+                padding-top: 50px;
+                transition: 0.3s ease-in-out;
+                font-weight: var(--font-weight-regular);
+            }
+                .top-sellers .card:hover .card-body h1 {
+                    margin-bottom: 0;
+                }
 
-    .top-sellers .card .card-body {
-        position: absolute;
-        padding: 1rem;
-        bottom: 0;
-        height: 14%;
-        width: 100%;
-        color: var(--color-white);
-        z-index: 1;
-        transition: 0.3s ease-in-out;
-        font-size: 1rem;
-    }
-        .top-sellers .card:hover .card-body {
-            height: 40%;
-        }
-
-        .top-sellers .card .card-body h1 {
-            font-size: 1.125rem;
-            margin-bottom: 3.5rem;
-            padding-top: 50px;
-            transition: 0.3s ease-in-out;
-            font-weight: var(--font-weight-regular);
-        }
-            .top-sellers .card:hover .card-body h1 {
-                margin-bottom: 0;
+            .top-sellers .card .card-body button {
+                background-color: transparent;
+                color: var(--color-white);
+                border: 1px solid var(--color-white);
+                font-size: 0.875rem;
+                padding-left: 0.9rem;
+                padding-right: 0.9rem;
+                margin: 0.5rem 0;
             }
 
-        .top-sellers .card .card-body button {
-            background-color: transparent;
-            color: var(--color-white);
-            border: 1px solid var(--color-white);
-            font-size: 0.875rem;
-            padding-left: 0.9rem;
-            padding-right: 0.9rem;
-            margin: 0.5rem 0;
-        }
-
-        .top-sellers .card .card-body .card-old-price {
-            text-decoration: line-through;
-            margin: 0;
-        }
-        .top-sellers .card .card-body .card-discount-price {
-            color: var(--color-theme);
-            font-weight: var(--font-weight-medium);
-            font-size: 1.5em;
-            margin: 0;
-        }
+            .top-sellers .card .card-body .card-old-price {
+                text-decoration: line-through;
+                margin: 0;
+            }
+            .top-sellers .card .card-body .card-discount-price {
+                color: var(--color-theme);
+                font-weight: var(--font-weight-medium);
+                font-size: 1.5em;
+                margin: 0;
+            }
 
     .top-sellers .card .card-background {
         position: absolute;
@@ -980,8 +964,6 @@ html, body {
         .top-sellers .card:hover .card-background {
             height: 100%;
         }    
-
-
 
 
     .top-sellers .card .card-menu {
@@ -1014,11 +996,6 @@ html, body {
                     }
 
 
-
-
-
-
-
     .top-sellers .sellers-box {
         position: relative;
         background-color: #F6F6F6;
@@ -1027,8 +1004,6 @@ html, body {
         width: 100%;
         overflow: hidden;
     }
-
-
 
 
     .top-sellers .card-t {
@@ -1131,11 +1106,6 @@ html, body {
                     }
 
 
-
-
-
-
-
                     .top-sellers .card-tt {
                         position: relative;
                         height: 336px;
@@ -1146,9 +1116,6 @@ html, body {
                         background-color: #F6F6F6;
                         border-radius: var(--border-radius-small);
                     }
-                
-                
-                
                 
                 
                     .top-sellers .card-tt .card-body {
@@ -1211,8 +1178,6 @@ html, body {
                         }    
                 
                 
-                
-                
                     .top-sellers .card-tt .card-menu {
                         position: absolute;
                         z-index: 1;
@@ -1241,27 +1206,6 @@ html, body {
                                     .top-sellers .card-tt .card-menu li a:hover {
                                         color: var(--color-theme);
                                     }
-                
-                
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
     #sellers-box-1 {
         grid-column: 1 / 3;
@@ -1287,10 +1231,8 @@ html, body {
 
 
 
-
-
-
 /* subscribe */
+
 .subscribe {
     background-color: #F6F6F6; 
 }
@@ -1302,15 +1244,6 @@ html, body {
         align-items: center;
         
     }
-    
-    .subscribe .container .andra {
-        height: 290px;
-        width: 440px;
-        margin: auto;
-        margin-left: 400px;
-        background-color: #CCCCCC;
-    }
-
 
         .subscribe .subscribe-body {
             width: 450px;
@@ -1318,34 +1251,32 @@ html, body {
             margin-top: -6rem;
             text-align: center;
         }
-        .subscribe .subscribe-body h1 {
-            padding-top: 4.8rem;
-        }
-        .subscribe .subscribe-body h1 {
-            font-family: var(--font-play);
-            font-weight: var(--font-weight-bold);
-            font-size: 2.25rem;
-            text-align: start;
-        }
-        .subscribe .subscribe-body h1 span {
-            font-family: var(--font-play);
-            font-weight: var(--font-weight-bold);
-            font-size: 2.25rem;
-            color: #20D3C2;
-        }
-        .subscribe .subscribe-body p {
-            font-family: var(--font-roboto);
-            font-weight: var(--font-weight-regular);
-            font-size: 0.9rem;
-            text-align: start;
-        }
+            .subscribe .subscribe-body h1 {
+                padding-top: 4.8rem;
+                font-family: var(--font-play);
+                font-weight: var(--font-weight-bold);
+                font-size: 2.25rem;
+                text-align: start;
+            }
+
+            .subscribe .subscribe-body h1 span {
+                font-family: var(--font-play);
+                font-weight: var(--font-weight-bold);
+                font-size: 2.25rem;
+                color: #20D3C2;
+            }
+            .subscribe .subscribe-body p {
+                font-family: var(--font-roboto);
+                font-weight: var(--font-weight-regular);
+                font-size: 0.9rem;
+                text-align: start;
+            }
  
 
 
         .subscribe .search {
             flex: 4;
         }
-    
     
             .subscribe .search #serachboxForm {
                 position: relative;
@@ -1384,23 +1315,28 @@ html, body {
                     background-color: var(--color-theme-dark);
                 }
 
-
-
-
-
-                footer.footer {
-                    height: 50px;
-                    width: 100%;
-                    background-color: #080C24;
+                .subscribe .container .andra {
+                    height: 290px;
+                    width: 440px;
+                    margin: auto;
+                    margin-left: 400px;
+                    background-color: #CCCCCC;
                 }
+
+
+    footer.footer {
+        height: 50px;
+        width: 100%;
+        background-color: #080C24;
+    }
                 
-                .footer p {
-                    color: #FFFFFF;
-                    line-height: 50px;
-                    font-family: var(--font-roboto);
-                    font-weight: var(--font-weight-regular);
-                    font-size: 0.8rem;
-                }
+        .footer p {
+            color: #FFFFFF;
+            line-height: 50px;
+            font-family: var(--font-roboto);
+            font-weight: var(--font-weight-regular);
+            font-size: 0.8rem;
+        }
 
 
 
